--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="title">
+            <h1>CONTACT MANAGEMENT SYSTEM</h1>
+        </div>
+        <form class="getContactDetails">
+            <Label> Name</Label>
+            <input type="text" placeholder="Name">
+            <label> Phone Number</label>
+            <input type="number" placeholder="Phone Number">
+            <Label>Email</Label>
+            <input type="email" placeholder="inf@email.com">
+            <button> Add Contact</button>
+        </form>
+    </section>
 </body>
 </html>
