--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
             <h1>CONTACT MANAGEMENT SYSTEM</h1>
         </div>
         <form class="getContactDetails">
-            <Label> Name</Label>
-            <input type="text" placeholder="Name">
-            <label> Phone Number</label>
-            <input type="number" placeholder="Phone Number">
-            <Label>Email</Label>
-            <input type="email" placeholder="inf@email.com">
+            <div>
+                <Label> Name</Label>
+                <input type="text" placeholder="Name">
+            </div>
+            <div>
+                <label> Phone Number</label>
+                <input type="number" placeholder="Phone Number">
+            </div>
+            <div>
+                <Label>Email</Label>
+                <input type="email" placeholder="inf@email.com">
+            </div>
             <button> Add Contact</button>
         </form>
     </section>
