--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="container">
         <div class="title">
             <h1>CONTACT MANAGEMENT SYSTEM</h1>
         </div>
-        <form class="getContactDetails">
-            <div>
-                <Label> Name</Label>
-                <input type="text" placeholder="Name">
-            </div>
-            <div>
-                <label> Phone Number</label>
-                <input type="number" placeholder="Phone Number">
-            </div>
-            <div>
-                <Label>Email</Label>
-                <input type="email" placeholder="inf@email.com">
-            </div>
-            <button> Add Contact</button>
-        </form>
+        <section id="form1">
+            <form class="getContactDetails">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" id="name" placeholder="Full Name" required />
+                </div>
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="text" id="phoneNumber" placeholder="Phone Number" required />
+                </div>
+                <div class="email">
+                    <label>Email</label>
+                    <input type="email" id="email" placeholder="inf@example.com" required />
+                </div>
+                <div class="btn-wrap">
+                    <button type="submit">Add Contact</button>
+                </div>
+            </form>
+        </section>
+       <section>
+        <input type="search">
+       </section>
     </section>
 </body>
 </html>
