--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group">
                     <label>Phone Number</label>
-                    <input type="text" id="phoneNumber" placeholder="Phone Number" required />
+                    <input type="text" id="phoneNumber" pattern="\d*" maxlength="15" placeholder="Phone Number" required />
                 </div>
                 <div class="email">
                     <label>Email</label>
@@ -31,8 +31,10 @@
             </form>
         </section>
        <section>
-        <input type="search">
-       </section>
+      <input type="search" id="search" placeholder="Search contacts...">
     </section>
+    <section class="contact-list" id="contactList"></section>
+    </section>
+    <script src="./dist/index.js"></script>
 </body>
 </html>
